--- a/src/sass/scrollbars.scss
+++ b/src/sass/scrollbars.scss
@@ -8,6 +8,7 @@
         background: $border;
 		border-radius: 2px;
         width: 8px;
+        height: 8px;
         box-shadow: inset 0 0 0 2px #fff;
     }
 
@@ -16,6 +17,7 @@
         background: #fff;
 		border-radius: 2px;
         width: 8px;
+        height: 8px;
 	}
 
 	// Darker for sidebar
